# politylink-crawler

./: .gitignore  README.md  alias.py  bill_url.md  crawl_bill_url.sh  crawl_ministries.sh  crawl_pdfs.sh  pyproject.toml
crawler/: settings.py  utils.py
crawler/spiders/: __init__.py  bill_spider.py  caa_spider.py  cao_spider.py  cas_spider.py  env_spider.py  fsa_spider.py  maff_spider.py  mainichi_spider.py  manual_committee_spider.py  meti_spider.py  mext_spider.py  mhlw_spider.py  minutes_spider.py  mlit_spider.py  mod_spider.py  mof_spider.py  mofa_spider.py  moj_spider.py  moji_spider.py  nikkei_spider.py  npa_spider.py  ppc_spider.py  recon_spider.py  reuters_kyodo_spider.py  reuters_spider.py  sangiin_committee_spider.py  sangiin_member_spider.py  sangiin_minutes_spider.py  sangiin_spider.py  sangiin_tv_spider.py  sanhou_spider.py  shugiin_committee_spider.py  shugiin_member_spider.py  shugiin_minutes_spider.py  shugiin_spider.py  shugiin_tv_spider.py  shuhou_spider.py  soumu_spider.py  vrsdd_member_spider.py  (+1 more)
crawler/utils/: __init__.py  common.py  elasticsearch.py  graphql.py  scrape.py  topics.py  validate.py
data/: alias.csv  mainichi.csv  nikkei.csv
tests/: test_utils.py
tests/spiders/: test_minutes_spider.py  test_nikkei_spider.py  test_shugiin_minutes_spider.py
tests/utils/: test_common.py  test_elasticsearch.py  test_scrape.py  test_topics.py
