[tool.poetry]
name = "politylink-crawler"
version = "0.1.0"
description = ""
authors = ["Mitsuki Usui"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.2.1"
politylink = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
